--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
     .thumbnail-container {
       margin-top: 10px;
-      height: 150px; /* Set a fixed height for the thumbnail containers */
+      height: 150px; 
     }
 
     .thumbnail {
       width: 100%;
-      height: 100%; /* Make sure the image takes the full height of the container */
+      height: 100%; 
       object-fit: cover;
       cursor: pointer;
       transition: transform 0.2s ease-in-out;
@@ -51,7 +51,6 @@
       display: block;
     }
 
-    /* Navigation buttons in modal */
     .modal-controls {
       position: absolute;
       top: 50%;
@@ -75,7 +74,7 @@
     .modal-controls button:hover {
       background-color: #0056b3;
     }
-/* Add these styles for the image captions */
+
 .thumbnail-caption {
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
@@ -83,7 +82,7 @@
   margin-top: 5px;
 }
 
-/* Update the modal styling */
+
 #imageModalLabel {
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
@@ -91,7 +90,7 @@
   text-align: center;
 }
 
-/* Update the modal controls styling */
+
 .modal-controls button {
   background-color: #007bff;
   border: none;
@@ -103,7 +102,7 @@
   transition: background-color 0.3s ease;
 }
 
-/* Update the modal controls button on hover styling */
+
 .modal-controls button:hover {
   background-color: #0056b3;
 }
