--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="imageModalLabel">Full Size Image</h5>
-        <!-- Remove the close button from here -->
+<button type="button" class="btn-close custom-close-button" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-center">
         <img id="fullSizeImage" class="img-fluid">
