--- a/index.html
+++ b/index.html
@@ -10,113 +10,118 @@
   <!-- Lightbox CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
 
- <style>
+<style>
     body {
-      background-color: #141b2d;
+        background-color: #141b2d;
     }
 
     .gallery-container {
-      margin-top: 100px;
+        margin-top: 100px;
     }
 
     .thumbnail-container {
-      margin-top: 10px;
+        margin-top: 10px;
+    }
+
+    .col-6 {
+        margin-bottom: 20px; /* Add margin between rows */
     }
 
     .thumbnail {
-      height: 100%;
-      object-fit: cover;
-      cursor: pointer;
-      transition: transform 0.2s ease-in-out;
-      padding-bottom: 10px;
-      border-radius: 10px;
+        height: 150px;
+        width: 100%;
+        object-fit: cover;
+        cursor: pointer;
+        transition: transform 0.2s ease-in-out;
+        border-radius: 10px;
     }
 
     .thumbnail:hover {
-      transform: scale(1.05) translateY(10px);
-      box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
+        transform: scale(1.05) translateY(10px);
+        box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
     }
 
     /* Modal styling */
     #imageModalLabel {
-      text-align: left;
+        text-align: left;
     }
 
     .modal-content {
-      animation: fadeIn 0.5s ease-in-out;
-      background-color: #1e2a40;
-      color: #b3bbc6;
+        animation: fadeIn 0.5s ease-in-out;
+        background-color: #1e2a40;
+        color: #b3bbc6;
     }
 
     @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
     }
 
     #fullSizeImage {
-      max-width: 100%;
-      max-height: 100vh;
-      margin: 0 auto;
-      display: block;
+        max-width: 100%;
+        max-height: 100vh;
+        margin: 0 auto;
+        display: block;
     }
 
     .modal-controls {
-      position: absolute;
-      top: 50%;
-      width: 93.5%;
-      display: flex;
-      justify-content: space-between;
-      transform: translateY(-50%);
+        position: absolute;
+        top: 50%;
+        width: 93.5%;
+        display: flex;
+        justify-content: space-between;
+        transform: translateY(-50%);
     }
 
     .modal-controls button {
-      background-color: black;
-      border: none;
-      font-size: 18px;
-      color: #fff;
-      cursor: pointer;
-      padding: 10px 20px;
-      border-radius: 5px;
+        background-color: black;
+        border: none;
+        font-size: 18px;
+        color: #fff;
+        cursor: pointer;
+        padding: 10px 20px;
+        border-radius: 5px;
     }
 
     .modal-controls button:hover {
-      background-color: #0056b3;
+        background-color: #0056b3;
     }
 
     .thumbnail-caption {
-      font-family: 'Poppins', sans-serif;
-      font-size: 14px;
-      letter-spacing: 1px;
-      margin-top: 5px;
+        font-family: 'Poppins', sans-serif;
+        font-size: 14px;
+        letter-spacing: 1px;
+        margin-top: 5px;
     }
 
     #imageModalLabel {
-      font-family: 'Poppins', sans-serif;
-      font-size: 18px;
-      letter-spacing: 1.1px;
-      text-align: left;
+        font-family: 'Poppins', sans-serif;
+        font-size: 18px;
+        letter-spacing: 1.1px;
+        text-align: left;
     }
 
     .modal-controls button {
-      background-color: #007bff;
-      border: none;
-      font-size: 16px;
-      color: #fff;
-      cursor: pointer;
-      padding: 8px 16px;
-      border-radius: 5px;
-      transition: background-color 0.3s ease, transform 0.2s ease-in-out;
+        background-color: #007bff;
+        border: none;
+        font-size: 16px;
+        color: #fff;
+        cursor: pointer;
+        padding: 8px 16px;
+        border-radius: 5px;
+        transition: background-color 0.3s ease, transform 0.2s ease-in-out;
     }
 
     .modal-controls button:hover {
-      background-color: #0056b3;
-      transform: scale(1.1);
+        background-color: #0056b3;
+        transform: scale(1.1);
     }
-  </style>
+</style>
+
 </head>
 <body>
 
